--- a/packages/shop-mobile-ionic/src/app/components/order/order.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/order/order.component.html
@@ -44,10 +44,15 @@
 <div class="hr"></div>
 
 <div (click)="goToOrder()" class="order-body">
-	<div class="product-container" *ngFor="let product of order.products">
+	<div
+		class="product-container"
+		[ngClass]="product.price == 0 ? 'deleted-product' : ''"
+		*ngFor="let product of order.products"
+	>
 		<e-cu-order-product
 			[orderProduct]="product"
 			[showDetailsButton]="showDetailsButton"
+			(remove)="removeProduct(order._id, $event)"
 		></e-cu-order-product>
 	</div>
 </div>
