feat: show comment input

--- a/packages/shop-mobile-ionic/src/app/components/order/order.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/order/order.component.html
@@ -52,6 +52,7 @@
 		<e-cu-order-product
 			[orderProduct]="product"
 			[showDetailsButton]="showDetailsButton"
+			[inProcessing]="inProcessing"
 			(remove)="removeProduct(order._id, $event)"
 		></e-cu-order-product>
 	</div>
