--- a/packages/shop-mobile-ionic/src/app/components/order/product/product.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/order/product/product.component.html
@@ -1,6 +1,9 @@
 <div class="container">
 	<div class="container-row">
-		<section class="product-image">
+		<section
+			[ngClass]="{ 'product-image-align-start': inProcessing }"
+			class="product-image"
+		>
 			<ion-img [src]="image.url" [ngClass]="imageClass"></ion-img>
 		</section>
 
@@ -17,6 +20,10 @@
 
 			<div class="details" *ngIf="showInsideDetailsButton">
 				<a href="#">{{ 'ORDER_HISTORY_VIEW.DETAILS' | translate }}</a>
+			</div>
+
+			<div *ngIf="inProcessing" class="comment">
+				<textarea placeholder="Comment"></textarea>
 			</div>
 		</section>
 	</div>
@@ -37,6 +44,7 @@
 	</section>
 
 	<section
+		*ngIf="inProcessing"
 		class="product-remove"
 		[ngClass]="{
 			ltr: document.documentElement.dir === 'rtl',
