feat: add prop Comment to OrderProduct

--- a/packages/shop-mobile-ionic/src/app/components/order/order.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/order/order.component.html
@@ -53,6 +53,7 @@
 			[orderProduct]="product"
 			[showDetailsButton]="showDetailsButton"
 			[inProcessing]="inProcessing"
+			[orderId]="order.id"
 			(remove)="removeProduct(order._id, $event)"
 		></e-cu-order-product>
 	</div>
