feat: add order product comment

--- a/packages/shop-mobile-ionic/src/app/components/order/order.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/order/order.component.html
@@ -55,6 +55,7 @@
 			[inProcessing]="inProcessing"
 			[orderId]="order.id"
 			(remove)="removeProduct(order._id, $event)"
+			(onAddComment)="onAddComment.emit($event)"
 		></e-cu-order-product>
 	</div>
 </div>
