--- a/packages/shop-mobile-ionic/src/app/pages/+orders-history/order-card/order-card.component.html
+++ b/packages/shop-mobile-ionic/src/app/pages/+orders-history/order-card/order-card.component.html
@@ -2,6 +2,7 @@
 	<e-cu-order
 		[order]="order"
 		(orderChange)="updateOrderData($event)"
+		(onAddComment)="addComment($event)"
 	></e-cu-order>
 
 	<div class="actions text-center" *ngIf="notDisplayedProductsAmount > 0">
