fix: rxjs and other property type build issue

--- a/packages/admin-web-angular/src/app/@theme/components/theme-settings/theme-settings.component.html
+++ b/packages/admin-web-angular/src/app/@theme/components/theme-settings/theme-settings.component.html
@@ -43,7 +43,7 @@
 	<div class="settings-row theme-button">
 		<select
 			[(ngModel)]="defaultLanguage"
-			(change)="switchLanguage()"
+			(change)="switchLanguage($event)"
 			status="primary"
 			class="form-control"
 		>
