fix: nb stepper and fake data optional property

--- a/packages/admin-web-angular/src/app/pages/+fakeData/fakeData.component.html
+++ b/packages/admin-web-angular/src/app/pages/+fakeData/fakeData.component.html
@@ -381,8 +381,8 @@
 					<button
 						class="btn btn-startProcessing btn-sm"
 						(click)="generate100Warehouses()"
-						[disabled]="isBtnDisabled.warehouses100"
-						[nbSpinner]="loading.warehouses100"
+						[disabled]="isBtnDisabled.warehouse100"
+						[nbSpinner]="loading.warehouse100"
 					>
 						{{ 'FAKE_DATA.CREATE_100_WAREHOUSES' | translate }}
 					</button>
