--- a/packages/admin-web-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
+++ b/packages/admin-web-angular/src/app/pages/+setup/+merchants/components/instructions/instructions.component.html
@@ -9,34 +9,34 @@
 		</h5>
 	</nb-card-header>
 	<nb-card-body>
-		<div *ngIf="stepper.index === 0">
+		<div *ngIf="stepper.selectedIndex === 0">
 			TODO add instructions for Account
 		</div>
-		<div *ngIf="stepper.index === 1">
+		<div *ngIf="stepper.selectedIndex === 1">
 			TODO add instructions for Basic info
 		</div>
-		<div *ngIf="stepper.index === 2">
+		<div *ngIf="stepper.selectedIndex === 2">
 			TODO add instructions for Contact info
 		</div>
-		<div *ngIf="stepper.index === 3">
+		<div *ngIf="stepper.selectedIndex === 3">
 			TODO add instructions for Location
 		</div>
-		<div *ngIf="stepper.index === 4">
+		<div *ngIf="stepper.selectedIndex === 4">
 			TODO add instructions for Payments
 		</div>
-		<div *ngIf="stepper.index === 5">
+		<div *ngIf="stepper.selectedIndex === 5">
 			TODO add instructions for Manufacturing
 		</div>
-		<div *ngIf="stepper.index === 6">
+		<div *ngIf="stepper.selectedIndex === 6">
 			TODO add instructions for Delivery & Takeaway Settings
 		</div>
-		<div *ngIf="stepper.index === 7">
+		<div *ngIf="stepper.selectedIndex === 7">
 			TODO add instructions for Orders Settings
 		</div>
-		<div *ngIf="stepper.index === 8">
+		<div *ngIf="stepper.selectedIndex === 8">
 			TODO add instructions for Product categories
 		</div>
-		<div *ngIf="stepper.index === 9">
+		<div *ngIf="stepper.selectedIndex === 9">
 			TODO add instructions for Products
 		</div>
 	</nb-card-body>
