--- a/packages/admin-web-angular/src/app/@theme/styles/styles.scss
+++ b/packages/admin-web-angular/src/app/@theme/styles/styles.scss
@@ -1,8 +1,9 @@
 // themes - our custom or/and out of the box themes
 @import 'themes';
+
 // framework component themes (styles tied to theme variables)
 @import '~@nebular/theme/styles/globals';
-@import '~@nebular/auth/styles/all';
+@import '~@nebular/auth/styles/globals';
 
 @import '~@nebular/bootstrap/styles/globals';
 
