fix: highlight syntax

--- a/packages/admin-web-angular/src/app/@shared/json-modal/json-modal.component.html
+++ b/packages/admin-web-angular/src/app/@shared/json-modal/json-modal.component.html
@@ -7,5 +7,5 @@
 </nb-card-header>
 
 <nb-card-body class="body">
-	<pre><code highlight [language]="['json']" [code]="obj | json" class="iconInfo"></code></pre>
+	<pre><code [highlight]="obj | json" [languages]="['json']" class="iconInfo"></code></pre>
 </nb-card-body>
