--- a/packages/admin-web-angular/src/app/pages/+carriers/+carrier/carrier-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+carriers/+carrier/carrier-info.component.html
@@ -31,6 +31,6 @@
 
 <div>
 	<pre>
-		<code highlight [language]="['json']" [code]="carrierData | json"></code>
+		<code [highlight]="carrierData | json" [languages]="['json']"></code>
 	</pre>
 </div>
