--- a/packages/admin-web-angular/src/app/pages/+customers/+customer/ea-customer-orders/order-info/order-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+customers/+customer/ea-customer-orders/order-info/order-info.component.html
@@ -43,7 +43,7 @@
 
 		<div class="json-info" *ngIf="showCode">
 			<div>
-				<pre><code style="height:300px" highlight [language]="['json']" [code]="selectedOrder | json" class="iconInfo"></code></pre>
+				<pre><code style="height:300px" [highlight]="selectedOrder | json" [languages]="['json']" class="iconInfo"></code></pre>
 			</div>
 		</div>
 	</div>
