--- a/packages/admin-web-angular/src/app/pages/+customers/+invites/+invites-requests/invites-requests.component.html
+++ b/packages/admin-web-angular/src/app/pages/+customers/+invites/+invites-requests/invites-requests.component.html
@@ -27,7 +27,7 @@
 
 		<div class="pull-right right-actions">
 			<nb-checkbox
-				[value]="notInvitedOnly"
+				[checked]="notInvitedOnly"
 				(change)="notInvitedOnlyChanged()"
 				status="success"
 			>
