--- a/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse-order/warehouse-info/warehouse-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse-order/warehouse-info/warehouse-info.component.html
@@ -41,7 +41,7 @@
 
 		<div class="json-info" *ngIf="showCode">
 			<div>
-				<pre><code highlight [language]="['json']" [code]="selectedWarehouse | json" class="iconInfo"></code></pre>
+				<pre><code [highlight]="selectedWarehouse | json" [languages]="['json']" class="iconInfo"></code></pre>
 			</div>
 		</div>
 	</div>
