--- a/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/warehouse-info/warehouse-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/warehouse-info/warehouse-info.component.html
@@ -27,6 +27,6 @@
 </div>
 <div>
 	<div>
-		<pre><code highlight [language]="['json']" [code]="warehouse | json" class="iconInfo"></code></pre>
+		<pre><code [highlight]="warehouse | json" [languages]="['json']" class="iconInfo"></code></pre>
 	</div>
 </div>
