--- a/packages/admin-web-angular/src/app/pages/forms/form-inputs/form-inputs.component.html
+++ b/packages/admin-web-angular/src/app/pages/forms/form-inputs/form-inputs.component.html
@@ -281,7 +281,7 @@
 				<div class="row demo-checkboxes-radio">
 					<div class="demo-checkboxes col-sm-4">
 						<nb-checkbox>Checkbox 1</nb-checkbox>
-						<nb-checkbox [value]="true">Checkbox 2</nb-checkbox>
+						<nb-checkbox [checked]="true">Checkbox 2</nb-checkbox>
 
 						<div class="custom-control custom-checkbox">
 							<input
