--- a/packages/admin-web-angular/src/app/pages/+setup/+merchants/components/contact-info/contact-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+setup/+merchants/components/contact-info/contact-info.component.html
@@ -52,7 +52,7 @@
 
 			<div class="form-group offset-md-2 col-md-4">
 				<nb-checkbox
-					[value]="forwardingEmail"
+					[checked]="forwardingEmail"
 					(change)="forwardingEmail = !forwardingEmail"
 				>
 					{{
@@ -63,7 +63,7 @@
 			</div>
 			<div class="form-group col-md-4">
 				<nb-checkbox
-					[value]="forwardingPhone"
+					[checked]="forwardingPhone"
 					(change)="forwardingPhone = !forwardingPhone"
 				>
 					{{
