fix: pagination controls attributes for merchant-tablet-ionic

--- a/packages/merchant-tablet-ionic/src/pages/+warehouse/all-oders/all-orders.component.html
+++ b/packages/merchant-tablet-ionic/src/pages/+warehouse/all-oders/all-orders.component.html
@@ -72,9 +72,9 @@
 		*ngIf="!focusedOrder"
 		class="pagination"
 		(pageChange)="loadPage($event)"
-		directionLinks="true"
-		autoHide="true"
-		responsive="true"
+		[directionLinks]="true"
+		[autoHide]="true"
+		[responsive]="true"
 		previousLabel="Previous"
 		nextLabel="Next"
 	>
