--- a/packages/merchant-tablet-ionic/src/pages/+warehouse/all-products/all-products.component.html
+++ b/packages/merchant-tablet-ionic/src/pages/+warehouse/all-products/all-products.component.html
@@ -79,9 +79,9 @@
 <pagination-controls
 	class="pagination"
 	(pageChange)="loadPage($event)"
-	directionLinks="true"
-	autoHide="true"
-	responsive="true"
+	[directionLinks]="true"
+	[autoHide]="true"
+	[responsive]="true"
 	previousLabel="Previous"
 	nextLabel="Next"
 >
