fix: carrier interfaces for merchant-tablet-ionic

--- a/packages/merchant-tablet-ionic/src/components/common/carrier-info/carrier-info.html
+++ b/packages/merchant-tablet-ionic/src/components/common/carrier-info/carrier-info.html
@@ -7,7 +7,7 @@
 	</div>
 	<div class="body">
 		<div *ngIf="order.carrier.logo" class="carrier-image">
-			<img src="{{ order.carrier.logo }}" alt="" />
+			<img [src]="order.carrier.logo" alt="" />
 		</div>
 		<div class="row m-0">
 			<div class="carrier-details col-9">
