fix: multiple fixes

--- a/packages/admin-web-angular/src/app/@shared/product/product-create/product-create.component.html
+++ b/packages/admin-web-angular/src/app/@shared/product/product-create/product-create.component.html
@@ -7,9 +7,9 @@
 <div>
 	<form-wizard
 		[formGroup]="form"
-		[buttonDone]="buttonDone"
-		[buttonNext]="buttonNext"
-		[buttonPrevious]="buttonPrevious"
+		[doneText]="buttonDone"
+		[nextText]="buttonNext"
+		[previousText]="buttonPrevious"
 		[nbSpinner]="loading"
 		#formWizard
 		class="form-horizontal"
