--- a/packages/admin-web-angular/src/app/@shared/user/user-mutation/user-mutation.component.html
+++ b/packages/admin-web-angular/src/app/@shared/user/user-mutation/user-mutation.component.html
@@ -11,9 +11,9 @@
 	<form-wizard
 		class="form-horizontal"
 		[formGroup]="form"
-		[buttonDone]="buttonDone"
-		[buttonNext]="buttonNext"
-		[buttonPrevious]="buttonPrevious"
+		[doneText]="buttonDone"
+		[nextText]="buttonNext"
+		[previousText]="buttonPrevious"
 	>
 		<wizard-step
 			[title]="
