--- a/packages/admin-web-angular/src/app/@shared/warehouse-product/warehouse-product-create/warehouse-product-create.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse-product/warehouse-product-create/warehouse-product-create.component.html
@@ -11,9 +11,9 @@
 		#wizzardFrom
 		class="form-horizontal"
 		[formGroup]="form"
-		[buttonDone]="buttonDone"
-		[buttonNext]="buttonNext"
-		[buttonPrevious]="buttonPrevious"
+		[doneText]="buttonDone"
+		[nextText]="buttonNext"
+		[previousText]="buttonPrevious"
 		[nbSpinner]="loading"
 	>
 		<wizard-step
