--- a/packages/admin-web-angular/src/app/@shared/warehouse/warehouse-mutation/warehouse-mutation.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/warehouse-mutation/warehouse-mutation.component.html
@@ -10,9 +10,9 @@
 <form-wizard
 	class="form-horizontal"
 	[formGroup]="form"
-	[buttonDone]="buttonDone"
-	[buttonNext]="buttonNext"
-	[buttonPrevious]="buttonPrevious"
+	[doneText]="buttonDone"
+	[nextText]="buttonNext"
+	[previousText]="buttonPrevious"
 >
 	<wizard-step
 		[title]="'WAREHOUSE_VIEW.MUTATION.WIZARD_TITLES.BASIC_INFO' | translate"
