--- a/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/+warehouse-order/warehouse-order.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/+warehouse/+warehouse-order/warehouse-order.component.html
@@ -9,9 +9,9 @@
 
 <form-wizard
 	#wizardForm
-	[buttonDone]="buttonDone"
-	[buttonNext]="buttonNext"
-	[buttonPrevious]="buttonPrevious"
+	[doneText]="buttonDone"
+	[nextText]="buttonNext"
+	[previousText]="buttonPrevious"
 	[nbSpinner]="loading"
 >
 	<wizard-step
