fix: some more fixes

--- a/packages/admin-web-angular/src/app/@shared/product/product-create/product-create.component.html
+++ b/packages/admin-web-angular/src/app/@shared/product/product-create/product-create.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
 	<span class="modal-title">{{ 'PRODUCT_TYPE_VIEW.TITLE' | translate }}</span>
-	<button class="close" aria-label="Close" (click)="_cancelModal()">
+	<button class="close" aria-label="Close" (click)="cancelModal()">
 		<span aria-hidden="true">&times;</span>
 	</button>
 </div>
