fix: class member declared property

--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/contact-info/contact-info-form.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/contact-info/contact-info-form.component.html
@@ -66,7 +66,7 @@
 		<div class="form-group row">
 			<div class="col-sm-6">
 				<nb-checkbox
-					[value]="forwardingEmail"
+					[checked]="forwardingEmail"
 					(change)="forwardingEmailChange()"
 				>
 					{{
@@ -108,7 +108,7 @@
 			</div>
 			<div class="col-sm-6">
 				<nb-checkbox
-					[value]="forwardingPhone"
+					[checked]="forwardingPhone"
 					(change)="forwardingPhoneChange()"
 				>
 					{{
