--- a/packages/admin-web-angular/src/app/pages/+carriers/+carrier/carrier-info/carrier-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+carriers/+carrier/carrier-info/carrier-info.component.html
@@ -67,6 +67,6 @@
 		</button>
 	</nb-card-body>
 	<nb-card-footer *ngIf="showCode">
-		<pre><code highlight [language]="['json']" [code]="carrier | json"></code></pre>
+		<pre><code [highlight]="carrier | json" [languages]="['json']"></code></pre>
 	</nb-card-footer>
 </nb-card>
