fix: apollo configuration for merchant-tablet-ionic

--- a/packages/merchant-tablet-ionic/src/components/settings-page-components/settings/settings.html
+++ b/packages/merchant-tablet-ionic/src/components/settings-page-components/settings/settings.html
@@ -136,15 +136,7 @@
 		<ion-row>
 			<ion-col>
 				<ion-button
-					[disabled]="
-						hasChanges(
-							paymentsSettings.isValid,
-							productsDelivery.dirty,
-							productsTakeaway.dirty,
-							orderBarcodeType.dirty,
-							barcodeData.dirty
-						)
-					"
+					[disabled]="hasChanges()"
 					class="save-button"
 					(click)="saveChanges()"
 					color="success"
