fix: commented font-awesome for "carrier-mobile-ionic"

--- a/packages/carrier-mobile-ionic/src/global.scss
+++ b/packages/carrier-mobile-ionic/src/global.scss
@@ -25,7 +25,7 @@
 @import 'theme/fonts/google-font-Jura';
 
 $fa-font-path: './assets/fonts' !default;
-@import '~font-awesome/scss/font-awesome';
+// @import '~font-awesome/scss/font-awesome';
 
 @import '~@ever-platform/common-angular/src/scss/everbie.common';
 
