fix: removed scss extract loader

--- a/packages/shop-web-angular/src/app/toolbar/toolbar.component.html
+++ b/packages/shop-web-angular/src/app/toolbar/toolbar.component.html
@@ -49,7 +49,7 @@
 		</span>
 		<mat-search
 			#matSearch
-			[color]="styleVariables.brandLighted"
+			[color]="'#353748'"
 			focusedColor="#f1f1f1"
 			(searchLocation)="tryFindNewAddress($event)"
 			(detectLocation)="loadAddress(true)"
