--- a/packages/admin-web-angular/src/app/@theme/styles/everlight.theme.scss
+++ b/packages/admin-web-angular/src/app/@theme/styles/everlight.theme.scss
@@ -2,7 +2,7 @@ $gray: #888;
 $danger: #ce4843;
 $primary: #3366ff;
 $success: #47d26f;
-$dark: hsl(234, 26, 25);
+$dark: hsl(234, 26%, 25%);
 $nb-themes: nb-register-theme(
 	(
 		color-success-100: #47d26f,
