fix: url package wrong import path

--- a/packages/admin-web-angular/src/app/@shared/product/categories/forms/basic-info/basic-info-form.component.html
+++ b/packages/admin-web-angular/src/app/@shared/product/categories/forms/basic-info/basic-info-form.component.html
@@ -31,7 +31,7 @@
 
 		<div class="col-sm-9">
 			<e-cu-file-uploader
-				[placeholder]="uploaderPlaceholder"
+				[placeholder]="'CATEGORY_VIEW.CREATE.PHOTO_OPTIONAL' | translate"
 				[name]="name?.value"
 				[fileUrl]="image?.value"
 				(uploadedImgUrl)="image.setValue($event)"
