--- a/packages/admin-web-angular/src/app/pages/+products/+categories/categories.component.html
+++ b/packages/admin-web-angular/src/app/pages/+products/+categories/categories.component.html
@@ -23,7 +23,7 @@
 			(click)="deleteSelectedRows()"
 		>
 			<i class="ion-md-trash button-icon mr-1"></i>
-			<span _ngcontent-c24="">{{
+			<span>{{
 				'CATEGORY_VIEW.DELETE' | translate
 			}}</span>
 		</button>
