fix: highlight js loading issue

--- a/packages/admin-web-angular/src/app/pages/+customers/customers.component.html
+++ b/packages/admin-web-angular/src/app/pages/+customers/customers.component.html
@@ -10,7 +10,7 @@
 		>
 			<i class="ion-md-add button-icon mr-1"></i>
 
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'CUSTOMERS_VIEW.CREATE' | translate
 			}}</small>
 		</button>
@@ -24,7 +24,7 @@
 		>
 			<i class="ion-md-trash button-icon mr-1"></i>
 
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'CUSTOMERS_VIEW.DELETE' | translate
 			}}</small>
 		</button>
@@ -49,11 +49,11 @@
 		>
 			<i class="ion-md-close-circle button-icon mr-1"></i>
 
-			<small _ngcontent-c55="" *ngIf="isUserBanned">{{
+			<small *ngIf="isUserBanned">{{
 				'CUSTOMERS_VIEW.UNBAN' | translate
 			}}</small>
 
-			<small _ngcontent-c55="" *ngIf="!isUserBanned">{{
+			<small *ngIf="!isUserBanned">{{
 				'CUSTOMERS_VIEW.BAN' | translate
 			}}</small>
 		</button>
