--- a/packages/admin-web-angular/src/app/pages/+device/device.component.html
+++ b/packages/admin-web-angular/src/app/pages/+device/device.component.html
@@ -16,7 +16,7 @@
 					(click)="deleteSelectedDevices()"
 				>
 					<i class="ion-md-trash button-icon mr-1"></i>
-					<small _ngcontent-c55="">{{
+					<small>{{
 						'CUSTOMERS_VIEW.DEVICE.DELETE' | translate
 					}}</small>
 				</button>
