--- a/packages/admin-web-angular/src/app/pages/+products/products.component.html
+++ b/packages/admin-web-angular/src/app/pages/+products/products.component.html
@@ -9,7 +9,7 @@
 			(click)="openWizardNewProduct()"
 		>
 			<i class="ion-md-add button-icon mr-1"></i>
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'PRODUCTS_VIEW.CREATE' | translate
 			}}</small>
 		</button>
@@ -21,7 +21,7 @@
 			(click)="deleteSelectedRows()"
 		>
 			<i class="ion-md-trash button-icon mr-1"></i>
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'PRODUCTS_VIEW.DELETE' | translate
 			}}</small>
 		</button>
