--- a/packages/admin-web-angular/src/app/pages/+warehouses/warehouses.component.html
+++ b/packages/admin-web-angular/src/app/pages/+warehouses/warehouses.component.html
@@ -9,7 +9,7 @@
 			(click)="createWarehouseModel()"
 		>
 			<i class="ion-md-add button-icon mr-1"></i>
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'WAREHOUSES_VIEW.CREATE' | translate
 			}}</small>
 		</button>
@@ -21,7 +21,7 @@
 			(click)="deleteSelectedRows()"
 		>
 			<i class="ion-md-trash button-icon mr-1"></i>
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'WAREHOUSES_VIEW.DELETE' | translate
 			}}</small>
 		</button>
@@ -32,7 +32,7 @@
 			routerLink="track"
 		>
 			<i class="ion-md-map button-icon mr-1"></i>
-			<small _ngcontent-c55="">{{
+			<small>{{
 				'WAREHOUSES_VIEW.SHOW_ON_MAP' | translate
 			}}</small>
 		</button>
