fix: Qrcode &  products missing syntax

--- a/packages/admin-web-angular/src/app/@shared/product/product-create/product-create.component.html
+++ b/packages/admin-web-angular/src/app/@shared/product/product-create/product-create.component.html
@@ -15,9 +15,10 @@
 		class="form-horizontal"
 	>
 		<wizard-step
-			[title]="''"
 			[isValid]="basicInfo.valid"
 			(onComplete)="createProduct()"
+			[showNext]="false"
+			[showPrev]="false"
 		>
 			<ea-product-basic-info-form
 				#basicInfoForm
