--- a/packages/admin-web-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.html
+++ b/packages/admin-web-angular/src/app/pages/+setup/+merchants/components/basic-info/basic-info.component.html
@@ -155,11 +155,11 @@
 						</span>
 					</small>
 				</div>
-				<div class="offset-md-2 col-md-8" [hidden]="!barcodetDataUrl">
+				<div class="offset-md-2 col-md-8" [hidden]="!barcodeDataUrl">
 					<div class="col-sm-10">
 						<span class="row preview-barcode">
 							<img
-								src="{{ barcodetDataUrl }}"
+								src="{{ barcodeDataUrl }}"
 								alt="Invalid image"
 								class="img-rounded"
 							/>
