--- a/packages/admin-web-angular/src/app/pages/+setup/+merchants/merchants.component.html
+++ b/packages/admin-web-angular/src/app/pages/+setup/+merchants/merchants.component.html
@@ -16,6 +16,7 @@
 								#account
 								(previousStep)="nbStepper.previous()"
 								(nextStep)="nbStepper.next()"
+								[showPrev]="false"
 							></ea-merchants-setup-account>
 						</nb-step>
 						<nb-step
