--- a/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
+++ b/packages/admin-web-angular/src/app/@shared/warehouse/forms/warehouse-manage-tabs/delivery-areas/warehouse-manage-tabs-delivery-areas.component.html
@@ -32,7 +32,7 @@
 								selectedShapeType = 'shape'; startDrawing()
 							"
 							nbButton
-							class="mr-2"
+							class="ml-2"
 						>
 							{{ 'WAREHOUSE_VIEW.MUTATION.SHAPE' | translate }}
 						</button>
