fix: geo location & typo issue

--- a/packages/shop-mobile-ionic/src/app/components/menu/submenu/submenu.component.html
+++ b/packages/shop-mobile-ionic/src/app/components/menu/submenu/submenu.component.html
@@ -6,7 +6,7 @@
 				routerDirection="root"
 				routerLinkActive="activated"
 			>
-				<ion-icon ios="md-basket" md="md-basket"></ion-icon>
+				<ion-icon name="basket"></ion-icon>
 				<ion-label>{{
 					'SIDE_MENU.GROUPS.NO_TITLE.ITEMS.PRODUCTS' | translate
 				}}</ion-label>
@@ -52,7 +52,6 @@
 
 	<ion-item-group>
 		<ion-item-divider>
-			<ion-icon name="settings"></ion-icon>
 			<ion-label>{{
 				'SIDE_MENU.GROUPS.SETTINGS.DIVER_TITLE' | translate
 			}}</ion-label>
